# MRSG-Update

./: Doxyfile  Makefile  README
MRSG-v.3.14.159/examples/: Makefile  cc.conf  cc.txt  create-mrsg-depoly.py  create-mrsg-plat.py  d-cc.xml  d-mrsg_32.xml  d-teste.xml  fb.conf  fb2009.conf  hello_mrsg.conf  lent-run.sh  mra15.conf  mrsg16-sophia-9g.conf  mrsg50-bitdew.conf  teste.conf  teste5.conf  yh_568.conf
MRSG-v.3.14.159/include/: dfs_mrsg.h  mrsg.h  worker_mrsg.h
MRSG-v.3.14.159/src/: common_mrsg.c  simcore_mrsg.c
MRSG_s4u/: .gitignore  CMakeLists.txt  CREATE PLATFORM COMMAND  Help-git  Makefile
MRSG_s4u/examples/: CMakeLists.txt  Makefile  create-mrsg-depoly.py  create-mrsg-plat.py  debug.txt  hello.c  hello_mrsg.cpp  mrsg_32.conf  mrsg_32.xml  run.sh  tasks-mrsg.csv
MRSG_s4u/include/: common_mrsg.hpp  dfs_mrsg.h  task_mrsg.hpp  worker_mrsg.h
MRSG_s4u/src/: common_mrsg.cpp  dfs_mrsg.cpp  master_mrsg.cpp  simcore_mrsg.cpp  task_mrsg.cpp  user_mrsg.cpp  worker_mrsg.cpp
doc/def/: doxygen.def
doc/html/: annotated.html  common__mrsg_8c__incl.map  common__mrsg_8c_a411d5133ab6881d40ef4cb44a7a47428_icgraph.map  common__mrsg_8c_ab5a4c02ceb90f40606c62816c672c5dd_icgraph.map  common__mrsg_8h.js  common__mrsg_8h_a385b12669d8faf7b5cdb54c1ae597e1c_cgraph.map  common__mrsg_8h_ab5a4c02ceb90f40606c62816c672c5dd_cgraph.md5  dfs__mrsg_8c__incl.md5  (+53 more)
examples/: Makefile  compile_run.sh  create-mrsg-depoly.py  create-mrsg-plat.py  d-reims-32.g5k.xml  example32config.conf  hello.deploy.xml  hello_mrsg.c  hello_mrsg.cpp  how_to_use.txt  mrsg-256.conf  mrsg-2knode.conf  mrsg128-nancy.conf  mrsg15.conf  mrsg32-reims.conf  mrsg64-grenoble.conf  mrsg_32.xml  reims-32.g5k.xml  run.sh  tasks-mrsg.csv  teste.xml  uncat.plist  yh_206.conf
include/: common_mrsg.h  common_mrsg.hpp  dfs_mrsg.hpp  mrsg.hpp  task_mrsg.hpp  worker_mrsg.hpp
src/: common_mrsg.c  dfs_mrsg.c  dfs_mrsg.cpp  master_mrsg.c  master_mrsg.cpp  simcore_mrsg.c  simcore_mrsg.cpp  user_mrsg.c  user_mrsg.cpp  worker_mrsg.c  worker_mrsg.cpp
(+338 files in other folders)
